[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/KleintenDynFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://ui/menu/LevelMenu.gd" type="Script" id=2]

[sub_resource type="Theme" id=1]

[node name="LevelMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.156863, 0.14902, 0.14902, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
pause_mode = 2
margin_left = 446.0
margin_top = 153.0
margin_right = 577.0
margin_bottom = 446.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 131.0
margin_bottom = 75.0
theme = SubResource( 1 )
custom_fonts/font = ExtResource( 1 )
text = "Niveles
"
align = 1
valign = 1

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 85.0
margin_right = 131.0
margin_bottom = 85.0

[node name="1" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 95.0
margin_right = 131.0
margin_bottom = 137.0
custom_fonts/font = ExtResource( 1 )
text = "1"

[node name="2" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 147.0
margin_right = 131.0
margin_bottom = 189.0
custom_fonts/font = ExtResource( 1 )
text = "2"

[node name="3" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 199.0
margin_right = 131.0
margin_bottom = 241.0
custom_fonts/font = ExtResource( 1 )
text = "3"

[node name="Return" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 251.0
margin_right = 131.0
margin_bottom = 293.0
custom_fonts/font = ExtResource( 1 )
text = " Return "

[connection signal="pressed" from="CenterContainer/VBoxContainer/1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Return" to="." method="_on_Return_pressed"]
