extends Control

func _on_1_pressed():
	get_tree().change_scene("res://World.tscn")

func _on_2_pressed():
	get_tree().change_scene("res://World.tscn")

func _on_3_pressed():
	get_tree().change_scene("res://World.tscn")

func _on_Return_pressed():
	get_tree().change_scene("res://ui/menu/MainMenu.tscn")
